@@ -17,6 +17,7 @@
 - added `instance.vary(type)` delegate that is executed when `variables`, `variables2` or `secrets` have been changed
 - added `asfile` argument into the `flowstream.add(name, body, [callback], [asfile])` method
 - added `asfiles` argument into the `flowstream.load(components, design, [callback], [asfiles])` method
+- fixed `callback` call after calling of `DEF.onMail()` delegate
 
 ========================
 0.0.83
